Mon Jan 25 17:05:00 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportImpl.h:

          Went back to just a fwd decl (not an include) of TransportImpl.
          This was required for gcc 3.3.2.

Fri Jan 22 22:13:53 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/mktiddler.pl:

          New script to generate a TiddlyWiki format table from latency
          test data created with the bin/extract.pl script.

        * performance-tests/Bench/bin/run_test:

          Added DDS_ROOT and ACE_ROOT to the search path so the script
          can execute from a local directory.

        * performance-tests/Bench/tools/plot-all.gp:

          Cosmetic cleanup for readability.

Fri Jan 22 20:20:35 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/Messenger/subscriber.cpp:

          Fixed locally modified conditional used for stress testing.

Fri Jan 22 19:46:57 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/ReceiveListenerSetMap.h:
        * dds/DCPS/transport/framework/TransportImpl.cpp:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          Fixed `interface' naming conflicts which affect some platforms.

Fri Jan 22 17:53:20 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/extract.pl:
        * performance-tests/Bench/bin/genstats.pl:
        * performance-tests/Bench/bin/lj-plots.gp:
        * performance-tests/Bench/bin/plot-jitter.gp:
        * performance-tests/Bench/bin/plot-transports.gp:
        * performance-tests/Bench/bin/reduce.pl:

          New data reduction and data visualization scripts to process
          latency testing results.

        * performance-tests/Bench/tools/convert-all:
        * performance-tests/Bench/tools/plot-all.gp:

          New data reduction and plotting scripts usable in a Linux